syntax = "proto3";

enum DirItemType {
  DIT_NOT_SET = 0;
  DIT_FILE = 1;
  DIT_DIR = 2;
}

message DirItem {
  string name = 1;
  DirItemType dirItemType = 2;
  uint32 filesize = 3;
}

message FileData {
  string filename = 1;
  uint32 filesize = 2;
  uint32 checksum = 3;
}

// message CurrentDirectory {
//   string dirPath = 1;
// }


message StoreUpcomingFileDataCommand {
  FileData fileData = 1;
}

message StoreUpcomingFileDataResponse {
  bool success = 1;
  uint32 bytesWritten = 2;
  FileData command = 3;
}


// message MkDirCommand {
//   string dirpath = 1;
// }

// message MkDirResponse {
//   bool success = 1;
//   MkDirCommand mkDirCommand = 2;
// }


message RmFileCommand {
  string filePath = 1;
}

message RmFileResponse {
  bool success = 1;
  RmFileCommand rmDirCommand = 2;
}


// message RmDirCommand {
//   string dirPath = 1;
// }

// message RmDirResponse {
//   bool success = 1;
//   RmDirCommand rmDirCommand = 2;
// }


message ReportFileDataCommand {
  string filename = 1;
}

message ReportFileDataResponse {
  bool fileExists = 1;
  FileData fileData = 2;
}


message ListDirContentsCommand {
  string dirPath = 1;
}

message ListDirContentsResponse {
  string dirPath = 1;
  repeated DirItem dirItems = 2;
}

message PrintDirContentsCommand {
  string dirPath = 1;
}

// message GetCwdCommand {
//   bool dummy = 1;
// }

// message GetCwdResponse {
//   bool success = 1;
//   CurrentDirectory currentDirectory = 2;
// }


// message ChDirCommand {
//   string dirPath = 1;
// }

// message ChDirResponse {
//   bool success = 1;
//   CurrentDirectory currentDirectory = 2;
// }


message ResetFilesystemCommand {
  bool dummy = 1;
}

message ResetFilesystemResponse {
  bool success = 1;
}

message PrintFileContentsCommand {
  string filePath = 1;
}



message FileSystemCommand {
  oneof command {
    // MkDirCommand mkDirCommand = 1;
    PrintDirContentsCommand printDirContentsCommand = 1;
    PrintFileContentsCommand printFileContentsCommand = 2;
    RmFileCommand rmFileCommand = 3;
    // RmDirCommand rmDirCommand = 3;
    // ChDirCommand chDirCommand = 4;
    // GetCwdCommand getCwdCommand = 5;
    StoreUpcomingFileDataCommand storeUpcomingFileDataCommand = 6;
    ReportFileDataCommand reportFileDataCommand = 7;
    ListDirContentsCommand listDirContentsCommand = 8;
    ResetFilesystemCommand resetFilesystemCommand = 9;
  }
}


message FileSystemResponse {
  oneof response {
    // MkDirResponse mkDirCommand = 1;
    RmFileResponse rmFileCommand = 2;
    // RmDirResponse rmDirCommand = 3;
    // ChDirResponse chDirCommand = 4;
    // GetCwdResponse getCwdCommand = 5;
    StoreUpcomingFileDataResponse storeUpcomingFileDataResponse = 6;
    ReportFileDataResponse reportFileDataResponse = 7;
    ListDirContentsResponse listDirContentsResponse = 8;
    ResetFilesystemResponse resetFilesystemResponse = 9;
  }
}
