syntax = "proto3";

import "file-system-commands.proto";
import "qroma-comm-routed-messages.proto";



message ClearToSendQuery {
  uint32 ctsRandomValue = 1;
}

message ClearToSendResponse {
  // uint32 ctsRandomValue = 1;
}

message LogResponse {
  string message = 1;
}

// enum FollowingQromaCommResponseType {
//   FQCRT_NotSet = 0;
//   FQCRT_LogResponse = 1;
//   FQCRT_ClearToSendResponse = 2;
//   FQCRT_FileSystemResponse = 3;
//   FQCRT_QromaComm_Routed_MessageResponse = 4;
// }

// message QromaCommHeader {
//   uint32 followingMessageSize = 1;
//   FollowingQromaCommResponseType followingResponseType = 2;
// }


message QromaCommCommand {
  uint32 initiatingCommandId = 1;

  oneof command {
    FileSystemCommand fsCommand = 2;
    ClearToSendQuery clearToSendQuery = 3;
    QromaComm_Routed_Message qromaCommRoutedMessage = 4;
  }
}

message QromaCommResponse {
  uint32 initiatingCommandId = 1;

  oneof response {
    FileSystemResponse fsResponse = 10;
    ClearToSendResponse clearToSendResponse = 11;
    QromaComm_Routed_Message_Response qcRoutedMessageResponse = 12;
    LogResponse logMessage = 13;
  }
}
